orchestration/k8s-resources/rabbitmq-2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  strategy:
    type: Recreate
  # `replicas` is hardcoded to `1`, because solution is not scalable.
  replicas: 1
  selector:
    matchLabels: 
      app: rabbitmq    
  template:
    metadata:
      labels:
        app: rabbitmq     
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - image: rabbitmq:4.0.2-management
        imagePullPolicy: IfNotPresent
        name: rabbitmq
        resources:
          requests:
            memory: 130Mi
            cpu: 10m
        ports:
        - containerPort: 15672
          name: rabbitmq-http
        - containerPort: 5672
          name: rabbitmq-br
        livenessProbe:
          tcpSocket:
            port: 5672
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 5672
          initialDelaySeconds: 10
          periodSeconds: 10
