orchestration/k8s-resources/rabbitmq-1-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rabbitmq
    csbexample: saga
  name: rabbitmq
spec:
  ports:
  - name: rabbitmq-tcp
    port: 5672
    protocol: TCP
    targetPort: 5672
  - name: rabbitmq-http
    port: 80
    protocol: TCP
    targetPort: 15672
  selector:
    app: rabbitmq
