orchestration/k8s-resources/01-saga-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orchestraton-ingress
  namespace: jentetest
spec:
  ingressClassName: nginx
  rules:
    - host: active-mq.minikube
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jente-activemq
                port:
                  number: 8161
    - host: lra-coordinator.minikube
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lra-coordinator
                port:
                  number: 8080
    - host: saga.minikube
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: camel-orchestration
                port:
                  number: 80
