orchestration/k8s-resources/lra-coordinator-4-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: activemq-ingress
  namespace: jentetest
spec:
  ingressClassName: nginx
  rules:
    - host: lra-coordinator.minikube
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lra-coordinator
                port:
                  number: 8080
